--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 
 <title>Home Repairs 4U – Exterior Decorating, Fencing, Garden, Gutters, Pressure Washing & uPVC Services in Askern DN6</title>
 
-<link rel="canonical" href="https://homerepairs4u.com/">
 <link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/">
 
 <meta name="description" content="Home Repairs 4U provides professional exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration in Askern DN6 and nearby areas. Call 07735 873694.">
 
-<link rel="preload" as="image" href="/images/logo.webp">
+<link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-body {
+body{
 margin:0;
+padding:0;
 font-family:Arial, sans-serif;
 background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
-header {
+header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
 border-bottom:4px solid #27ae60;
 }
-.logo {
+.logo{
 max-height:90px;
+width:auto;
 }
-.call-btn {
+.call-btn{
 display:inline-block;
 margin-top:18px;
 padding:14px 28px;
@@ -40,16 +42,17 @@ font-size:19px;
 text-decoration:none;
 font-weight:bold;
 border-radius:6px;
+border:2px solid #000;
 }
-.call-btn:hover { background:#333; }
-main {
+.call-btn:hover{ background:#333; }
+main{
 max-width:900px;
 margin:0 auto;
 background:#fff;
 padding:25px 15px;
 }
-h1,h2 { color:#111; }
-.service-btn {
+h1,h2,h3{ color:#111; }
+.service-btn{
 display:inline-block;
 margin-top:15px;
 padding:12px 24px;
@@ -59,34 +62,41 @@ font-size:18px;
 text-decoration:none;
 font-weight:bold;
 border-radius:6px;
+border:2px solid #000;
 }
-.service-btn:hover { background:#333; }
-footer {
+.service-btn:hover{ background:#333; }
+footer{
 background:#000;
 color:#fff;
 text-align:center;
-padding:28px 15px;
-font-size:14px;
+padding:25px 15px;
 margin-top:40px;
+font-size:14px;
 }
-.lightbox {
+
+/* Lightbox */
+.lightbox{
 display:none;
 position:fixed;
-inset:0;
+z-index:9999;
+left:0;
+top:0;
+width:100%;
+height:100%;
 background:rgba(0,0,0,0.85);
 align-items:center;
 justify-content:center;
-z-index:9999;
 }
-.lightbox img {
+.lightbox img{
 max-width:95%;
 max-height:95%;
 border-radius:6px;
+box-shadow:0 0 20px #000;
 }
-.lightbox:target { display:flex; }
+.lightbox:target{ display:flex; }
 </style>
 
-<!-- LocalBusiness Schema -->
+<!-- Business Schema -->
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
@@ -102,7 +112,7 @@ border-radius:6px;
 "addressRegion":"South Yorkshire",
 "addressCountry":"GB"
 },
-"description":"Professional home services in Askern DN6 including exterior decorating, fencing, garden maintenance, guttering, pressure washing and uPVC restoration.",
+"description":"Professional home services in Askern DN6 including exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration.",
 "openingHoursSpecification":[{
 "@type":"OpeningHoursSpecification",
 "dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
@@ -116,76 +126,119 @@ border-radius:6px;
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
 <main>
 
-<h1>Professional Home Services in Askern DN6</h1>
+<h1>Welcome to Home Repairs 4U – Professional Home Services in Askern DN6</h1>
 
 <p>
-At <strong>Home Repairs 4U</strong>, we provide reliable home and exterior services across Askern DN6 and surrounding areas. From decorating and fencing to guttering, pressure washing and uPVC restoration, all work is fully insured and completed to a high standard.
+At <strong>Home Repairs 4U</strong> we provide expert home and garden services across Askern DN6 and surrounding areas. From exterior decorating and fencing to guttering, pressure washing and uPVC restoration — our experienced, insured team delivers high-quality workmanship and lasting results.
 </p>
 
-<p>
-We provide reliable home repair services across South Yorkshire.
-You can view the full list of towns and villages we cover on our
-<a href="/services/service-areas.html">service areas page</a>.
-</p>
-
+<!-- Exterior Decorating -->
 <h2>Exterior Decorating</h2>
 <p>
-Our exterior decorating service refreshes brickwork, cladding, fences and railings using weather-resistant paints and proper preparation for long-lasting results.
+Our <strong>exterior decorating</strong> service refreshes brickwork, cladding, fences and railings using weather-resistant paints and careful surface preparation.
 </p>
+
 <a href="#decorating-lightbox">
-<img src="/images/house-before-after.webp" alt="Exterior decorating before and after" style="width:100%;border-radius:6px;">
+<img src="/images/house-before-after.webp" alt="Exterior decorating before and after example" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
 </a>
+
 <div id="decorating-lightbox" class="lightbox">
 <a href="#"><img src="/images/house-before-after.webp" alt=""></a>
 </div>
+
 <a href="/services/exterior-decorating.html" class="service-btn">View Exterior Decorating</a>
 
+<!-- Fence Installation -->
 <h2>Fence Installation</h2>
 <p>
-We install and repair timber fencing including closeboard, feather edge and decorative panels, all securely fitted for strength and privacy.
+We install and repair all types of timber fencing including closeboard, feather edge and decorative panels.
 </p>
+
 <a href="#fence-lightbox">
-<img src="/images/fence-before-after.webp" alt="Fence installation before and after" style="width:100%;border-radius:6px;">
+<img src="/images/fence-before-after.webp" alt="Fence installation before and after example" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
 </a>
+
 <div id="fence-lightbox" class="lightbox">
 <a href="#"><img src="/images/fence-before-after.webp" alt=""></a>
 </div>
+
 <a href="/services/fence-installation.html" class="service-btn">View Fence Installation</a>
 
+<!-- Garden -->
 <h2>Garden Maintenance</h2>
 <p>
-We provide one-off and regular garden maintenance including lawn care, hedge trimming, planting and general tidy-ups.
+From one-off tidy-ups to regular maintenance and landscaping, we offer lawn care, hedge trimming and planting.
 </p>
+
+<a href="#garden-lightbox">
+<img src="/images/gardening.webp" alt="Garden maintenance services" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
+</a>
+
+<div id="garden-lightbox" class="lightbox">
+<a href="#"><img src="/images/gardening.webp" alt=""></a>
+</div>
+
 <a href="/services/garden.html" class="service-btn">View Garden Services</a>
 
-<h2>Gutter Services</h2>
+<!-- Guttering -->
+<h2>Gutter Replacement</h2>
 <p>
-We replace, repair and maintain guttering, downpipes, fascias and soffits to protect your property from water damage.
+Proper guttering protects your property from water damage. We replace gutters, repair leaks and maintain downpipes.
 </p>
+
 <p>
 Our guttering services are available across multiple local areas.
 See all locations we cover on our
 <a href="/services/service-areas.html">service areas page</a>.
 </p>
+
+<a href="#guttering-lightbox">
+<img src="/images/gutter-repairs.webp" alt="Gutter repairs and replacement" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
+</a>
+
+<div id="guttering-lightbox" class="lightbox">
+<a href="#"><img src="/images/gutter-repairs.webp" alt=""></a>
+</div>
+
 <a href="/services/guttering.html" class="service-btn">View Gutter Services</a>
 
+<!-- Pressure Washing -->
 <h2>Pressure Washing</h2>
 <p>
-Our pressure washing service restores patios, driveways and paths by removing algae, moss and built-up grime.
+Our pressure washing refreshes driveways, patios, decking and brickwork.
 </p>
+
+<a href="#pressure-lightbox">
+<img src="/images/pressure-washing.webp" alt="Pressure washing services" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
+</a>
+
+<div id="pressure-lightbox" class="lightbox">
+<a href="#"><img src="/images/pressure-washing.webp" alt=""></a>
+</div>
+
 <a href="/services/pressure-washing.html" class="service-btn">View Pressure Washing</a>
 
+<!-- uPVC -->
 <h2>uPVC Restoration</h2>
 <p>
-We restore uPVC windows, doors and conservatories, removing discolouration safely without damaging frames or seals.
+We restore uPVC windows, doors and conservatories to remove discolouration and grime.
 </p>
+
+<a href="#upvc-lightbox">
+<img src="/images/upvc.webp" alt="uPVC restoration services" style="width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;" loading="lazy">
+</a>
+
+<div id="upvc-lightbox" class="lightbox">
+<a href="#"><img src="/images/upvc.webp" alt=""></a>
+</div>
+
 <a href="/services/upvc-restoration.html" class="service-btn">View uPVC Restoration</a>
 
 </main>
@@ -193,11 +246,13 @@ We restore uPVC windows, doors and conservatories, removing discolouration safel
 <footer>
 <p>📞 Call 07735 873694</p>
 <p>
-<a href="/services/service-areas.html" style="color:#fff;text-decoration:underline;">Service Areas</a> |
 <a href="/services/guttering.html" style="color:#fff;text-decoration:underline;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff;text-decoration:underline;">Pressure Washing</a>
+<a href="/services/pressure-washing.html" style="color:#fff;text-decoration:underline;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff;text-decoration:underline;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff;text-decoration:underline;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff;text-decoration:underline;">Service Areas</a>
 </p>
-<p>© Home Repairs 4U – Doncaster & Surrounding Areas</p>
+<p>© Home Repairs 4U | Doncaster</p>
 </footer>
 
 </body>
