--- a/services/service-areas.html
+++ b/services/service-areas.html
@@ -1,30 +1,115 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Service Areas | Home Repairs 4U</title>
-<meta name="description" content="Home Repairs 4U provides gutter clearing, pressure washing, and other home services across Doncaster and surrounding villages. Find your local service page here.">
+<title>Service Areas | Home Repairs 4U – Doncaster & Surrounding Villages</title>
+<meta name="description" content="Home Repairs 4U provides gutter clearing, pressure washing, fencing, and uPVC services across Doncaster and nearby villages. Find your local service page here.">
 
-<!-- Canonical -->
 <link rel="canonical" href="https://homerepairs4u.com/services/service-areas.html" />
-
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.8;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 main{max-width:1000px;margin:0 auto;background:#fff;padding:32px 22px;}
-h1,h2{color:#111;}
+h1,h2,h3{color:#111;margin-top:1.5em;}
+h2{border-bottom:2px solid #27ae60;padding-bottom:6px;}
 ul{list-style:none;padding-left:0;}
 li{margin-bottom:12px;}
 a{color:#000;text-decoration:underline;}
 a:hover{text-decoration:none;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;}
+.call-btn:hover{background:#333;}
 footer{background:#fff;color:#000;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
+.location-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:10px;margin-top:20px;}
+.location-grid a{display:block;padding:8px 12px;background:#f0f0f0;border-radius:6px;text-align:center;}
+.location-grid a:hover{background:#27ae60;color:#fff;text-decoration:none;}
+.faq-section{margin-top:40px;}
+.faq-section h2{margin-bottom:12px;}
+.faq-section dt{font-weight:bold;margin-top:15px;}
+.faq-section dd{margin:5px 0 15px 0;}
 </style>
+
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Doncaster",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN6",
+"addressCountry":"GB"
+},
+"description":"Home Repairs 4U provides gutter clearing, pressure washing, fencing, and uPVC restoration services across Doncaster and surrounding villages.",
+"areaServed":[
+{"@type":"Place","name":"Bentley, Doncaster"},
+{"@type":"Place","name":"Burghwallis, Doncaster"},
+{"@type":"Place","name":"Campsall, Doncaster"},
+{"@type":"Place","name":"Carcroft, Doncaster"},
+{"@type":"Place","name":"Darrington, Doncaster"},
+{"@type":"Place","name":"Hampole, Doncaster"},
+{"@type":"Place","name":"Skellow, Doncaster"},
+{"@type":"Place","name":"Woodlands, Doncaster"},
+{"@type":"Place","name":"Adwick-le-Street, Doncaster"},
+{"@type":"Place","name":"Askern, Doncaster"},
+{"@type":"Place","name":"Sprotbrough, Doncaster"},
+{"@type":"Place","name":"Kirk-Sandall, Doncaster"},
+{"@type":"Place","name":"Edenthorpe, Doncaster"},
+{"@type":"Place","name":"Fenwick, Doncaster"}
+]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "Which areas do you provide gutter services for?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We provide gutter clearing, repair, and replacement across Doncaster and nearby villages including Bentley, Askern, Skellow, and Carcroft."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer pressure washing in all local villages?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, our pressure washing service covers all surrounding areas, including Norton, Womersley, Sprotbrough, and Darrington."
+}
+},
+{
+"@type": "Question",
+"name": "Are your services insured?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "All our services are fully insured, ensuring peace of mind and professional workmanship across every local job."
+}
+},
+{
+"@type": "Question",
+"name": "How can I get a quote?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "You can call us on 07735 873694 or use our online gutter and pressure washing calculators for an instant quote."
+}
+}
+]
+}
+</script>
+
 </head>
 <body>
 
@@ -32,47 +117,47 @@ footer{background:#fff;color:#000;text-align:center;padding:28px 15px;margin-top
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
-<a href="tel:+447735873694" style="display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;">Call 07735 873694</a>
+<a href="tel:+447735873694" class="call-btn">📞 Call 07735 873694</a>
 </header>
 
 <main>
-<h1>Service Areas</h1>
+<h1>Our Service Areas – Doncaster & Surrounding Villages</h1>
 
 <p>
-Home Repairs 4U provides professional gutter clearing, pressure washing, and other home repair services across Doncaster and surrounding villages. Select your location below to view services specific to your area.
+At <strong>Home Repairs 4U</strong>, we provide professional gutter clearing, pressure washing, fencing, garden maintenance, and uPVC restoration across Doncaster and nearby villages. Use the sections below to find your local service page and get an instant quote.
 </p>
 
-<h2>Guttering Services</h2>
-<ul>
-<li><a href="/local/gutter-services-bentley.html">Bentley, Doncaster</a></li>
-<li><a href="/local/gutter-services-burghwallis.html">Burghwallis, Doncaster</a></li>
-<li><a href="/local/gutter-services-campsall.html">Campsall, Doncaster</a></li>
-<li><a href="/local/gutter-services-carcroft.html">Carcroft, Doncaster</a></li>
-<li><a href="/local/gutter-services-darrington.html">Darrington, Doncaster</a></li>
-<li><a href="/local/gutter-services-hampole.html">Hampole, Doncaster</a></li>
-<li><a href="/local/gutter-services-skellow.html">Skellow, Doncaster</a></li>
-<li><a href="/local/gutter-services-woodlands.html">Woodlands, Doncaster</a></li>
-<li><a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street, Doncaster</a></li>
-<li><a href="/local/gutter-services-askern.html">Askern, Doncaster</a></li>
-<li><a href="/local/gutter-services-sprotbrough.html">Sprotbrough, Doncaster</a></li>
-<li><a href="/local/gutter-services-kirk-sandall.html">Kirk-Sandall, Doncaster</a></li>  
-<li><a href="/local/gutter-services-kirk-sandall.html">Edenthorpe, Doncaster</a></li>  
-<li><a href="/local/gutter-services-kirk-sandall.html">Fenwick, Doncaster</a></li>  
-</ul>
+<h2>Guttering Services – Local Pages</h2>
+<div class="location-grid">
+<a href="/local/gutter-services-bentley.html">Bentley</a>
+<a href="/local/gutter-services-burghwallis.html">Burghwallis</a>
+<a href="/local/gutter-services-campsall.html">Campsall</a>
+<a href="/local/gutter-services-carcroft.html">Carcroft</a>
+<a href="/local/gutter-services-darrington.html">Darrington</a>
+<a href="/local/gutter-services-hampole.html">Hampole</a>
+<a href="/local/gutter-services-skellow.html">Skellow</a>
+<a href="/local/gutter-services-woodlands.html">Woodlands</a>
+<a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street</a>
+<a href="/local/gutter-services-askern.html">Askern</a>
+<a href="/local/gutter-services-sprotbrough.html">Sprotbrough</a>
+<a href="/local/gutter-services-kirk-sandall.html">Kirk-Sandall</a>
+<a href="/local/gutter-services-edenthorpe.html">Edenthorpe</a>
+<a href="/local/gutter-services-fenwick.html">Fenwick</a>
+</div>
 
-<h2>Pressure Washing Services</h2>
-<ul>
-<li><a href="/local/pressure-washing-bentley.html">Bentley, Doncaster</a></li>
-<li><a href="/local/pressure-washing-campsall.html">Campsall, Doncaster</a></li>
-<li><a href="/local/pressure-washing-carcroft.html">Carcroft, Doncaster</a></li>
-<li><a href="/local/pressure-washing-darrington.html">Darrington, Doncaster</a></li>
-<li><a href="/local/pressure-washing-skellow.html">Skellow, Doncaster</a></li>
-<li><a href="/local/pressure-washing-sprotbrough.html">Sprotbrough, Doncaster</a></li>
-<li><a href="/local/pressure-washing-scawsby.html">Scawsby, Doncaster</a></li>
-<li><a href="/local/pressure-washing-scawthorpe.html">Scawthorpe, Doncaster</a></li>
-<li><a href="/local/pressure-washing-womersley.html">Womersley, Doncaster</a></li>
-<li><a href="/local/pressure-washing-norton.html">Norton, Doncaster</a></li>
-</ul>
+<h2>Pressure Washing Services – Local Pages</h2>
+<div class="location-grid">
+<a href="/local/pressure-washing-bentley.html">Bentley</a>
+<a href="/local/pressure-washing-campsall.html">Campsall</a>
+<a href="/local/pressure-washing-carcroft.html">Carcroft</a>
+<a href="/local/pressure-washing-darrington.html">Darrington</a>
+<a href="/local/pressure-washing-skellow.html">Skellow</a>
+<a href="/local/pressure-washing-sprotbrough.html">Sprotbrough</a>
+<a href="/local/pressure-washing-scawsby.html">Scawsby</a>
+<a href="/local/pressure-washing-scawthorpe.html">Scawthorpe</a>
+<a href="/local/pressure-washing-womersley.html">Womersley</a>
+<a href="/local/pressure-washing-norton.html">Norton</a>
+</div>
 
 <h2>Why Choose Home Repairs 4U</h2>
 <ul>
@@ -85,31 +170,44 @@ Home Repairs 4U provides professional gutter clearing, pressure washing, and oth
 
 <h2>Book Your Local Service</h2>
 <p>
-Select your location above or visit our main services pages for more information. You can also call us directly at <strong>07735 873694</strong> to arrange a visit or get an instant quote using our gutter or pressure washing calculators.
+Select your location above or visit our main service pages for more details. Call <strong>07735 873694</strong> or use our online quote calculators for instant pricing.
 </p>
+
+<!-- FAQ Section -->
+<div class="faq-section">
+<h2>Frequently Asked Questions</h2>
+<dl>
+<dt>Which areas do you provide gutter services for?</dt>
+<dd>We provide gutter clearing, repair, and replacement across Doncaster and nearby villages including Bentley, Askern, Skellow, and Carcroft.</dd>
+
+<dt>Do you offer pressure washing in all local villages?</dt>
+<dd>Yes, our pressure washing service covers all surrounding areas, including Norton, Womersley, Sprotbrough, and Darrington.</dd>
+
+<dt>Are your services insured?</dt>
+<dd>All our services are fully insured, ensuring peace of mind and professional workmanship across every local job.</dd>
+
+<dt>How can I get a quote?</dt>
+<dd>You can call us on <strong>07735 873694</strong> or use our online gutter and pressure washing calculators for an instant quote.</dd>
+</dl>
+</div>
 
 </main>
 
 <footer>
-<footer style="background:#fff;color:#000;text-align:center;padding:26px 15px;font-size:14px;">
-
-<p style="margin:0 0 10px;">
-© Home Repairs 4U | Doncaster
-</p>
+<p style="margin:0 0 10px;">© Home Repairs 4U | Doncaster</p>
 
 <nav>
 <a href="/services/guttering.html">Guttering</a> |
 <a href="/services/pressure-washing.html">Pressure Washing</a> |
 <a href="/services/fence-installation.html">Fencing</a> |
-<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a> |
+<a href="/">Home</a>
 </nav>
 
 <nav style="margin-top:10px;">
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener">
-Facebook
-</a>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener">Facebook</a>
 </nav>
-
 </footer>
+
 </body>
 </html>
