--- a/test.html
+++ b/test.html
@@ -1,1 +1,231 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Professional Pressure Washing in Darrington, West Yorkshire | Home Repairs 4U</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-darrington.html">
+
+<meta name="description" content="Expert pressure washing service in Darrington, West Yorkshire, near Pontefract. Driveways, patios, decking, paths and walls cleaned safely and professionally. Call 07735 873694.">
+
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
+
+<style>
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
+.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox:target{display:flex;}
+footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+</style>
+
+<!-- Open Graph Meta -->
+<meta property="og:title" content="Professional Pressure Washing in Darrington, West Yorkshire | Home Repairs 4U">
+<meta property="og:description" content="Driveways, patios, decking, paths and walls cleaned safely and professionally in Darrington, near Pontefract. Call 07735 873694.">
+<meta property="og:image" content="https://homerepairs4u.com/images/logo.webp">
+<meta property="og:url" content="https://homerepairs4u.com/local/pressure-washing-darrington-pontefract.html">
+<meta property="og:type" content="website">
+
+<!-- Main Business Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"@id":"https://homerepairs4u.com/#business",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"logo":"https://homerepairs4u.com/images/logo.webp",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"address":{"@type":"PostalAddress","addressRegion":"West Yorkshire","addressCountry":"GB"},
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":["Darrington","Pontefract","Castleford","Featherstone","Ackworth"],
+"geo":{"@type":"GeoCoordinates","latitude":53.715,"longitude":-1.320}
+}
+</script>
+
+<!-- Service Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"Service",
+"@id":"https://homerepairs4u.com/local/pressure-washing-darrington-pontefract.html#service",
+"name":"Exterior Pressure Washing in Darrington, West Yorkshire",
+"description":"Professional cleaning of outdoor surfaces including driveways, patios, decking, walls and pathways for properties in Darrington and nearby areas.",
+"provider":{"@id":"https://homerepairs4u.com/#business"},
+"areaServed":{"@type":"Place","name":"Darrington, West Yorkshire"},
+"serviceType":["Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
+}
+</script>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Local Services","item":"https://homerepairs4u.com/local/"},
+{"@type":"ListItem","position":3,"name":"Pressure Washing Darrington","item":"https://homerepairs4u.com/local/pressure-washing-darrington-pontefract.html"}
+]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"How often should I have my driveway or patio cleaned?","acceptedAnswer":{"@type":"Answer","text":"Typically, once a year is enough, though shaded or frequently used areas may benefit from cleaning every 6-9 months."}},
+{"@type":"Question","name":"Is pressure washing safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"Yes, we adjust pressure, nozzles, and techniques to suit each type of surface safely."}},
+{"@type":"Question","name":"Can you remove moss, algae, and weeds?","acceptedAnswer":{"@type":"Answer","text":"Absolutely, we remove moss, algae, lichen, and weeds to restore safety and appearance."}},
+{"@type":"Question","name":"Do you offer re-sanding or sealing?","acceptedAnswer":{"@type":"Answer","text":"Optional re-sanding and sealing services are available to extend the life of your surfaces."}},
+{"@type":"Question","name":"Can I get an estimate before booking?","acceptedAnswer":{"@type":"Answer","text":"Yes, use our online calculator for an instant estimate, or request a free on-site assessment."}}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<h1>Expert Pressure Washing in Darrington, West Yorkshire</h1>
+
+<p>Home Repairs 4U provides professional pressure washing for homeowners and small businesses across Darrington, near Pontefract. Our team specializes in restoring driveways, patios, decking, walls, and pathways to a clean, safe, and attractive condition.</p>
+
+<p>Outdoor areas naturally collect dirt, moss, algae, and other debris over time. Left untreated, these can make surfaces slippery, unsightly, and more prone to wear. Our cleaning methods are tailored to each surface type, ensuring a thorough clean without damage.</p>
+
+<h2>Why Professional Cleaning Matters</h2>
+
+<p>Pressure washing not only improves the appearance of your property but also enhances safety and reduces long-term maintenance. Regular cleaning can prevent slippery moss build-up, protect paving joints, and prolong the lifespan of decking and stonework.</p>
+
+<h2>Our Cleaning Process</h2>
+
+<p>Every job begins with a detailed inspection. We assess the surface type, condition, and areas requiring extra care. Water pressure, nozzles, and cleaning techniques are adjusted accordingly. Heavily soiled areas may receive pre-treatment to break down moss, algae, and grime. Optional services like re-sanding and sealing provide long-lasting protection and reduce future maintenance requirements.</p>
+
+<h2>Who Can Benefit</h2>
+
+<ul>
+<li>Homeowners seeking to refresh and maintain their outdoor spaces</li>
+<li>Landlords preparing properties for tenants</li>
+<li>Small businesses looking to maintain a professional exterior</li>
+<li>Property sellers enhancing curb appeal for potential buyers</li>
+</ul>
+
+<h2>Instant Price Estimator</h2>
+
+<form id="quoteForm">
+<label for="sqm">Surface area (m²)</label>
+<input type="number" id="sqm" min="1" step="0.01" required>
+
+<div class="form-row"><input type="checkbox" id="wash" checked><label for="wash">Standard pressure washing</label></div>
+<div class="form-row"><input type="checkbox" id="bio"><label for="bio">Moss and algae treatment</label></div>
+<div class="form-row"><input type="checkbox" id="extra"><label for="extra">Heavy stain removal</label></div>
+<div class="form-row"><input type="checkbox" id="sand"><label for="sand">Block paving re-sanding</label></div>
+<div class="form-row"><input type="checkbox" id="seal"><label for="seal">Protective sealing</label></div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Enter a valid area.");return;}
+let total=55;
+let items=["Service setup: £55.00"];
+if(wash.checked){let p=sqm*2.75; total+=p; items.push(`Pressure washing: £${p.toFixed(2)}`);}
+if(bio.checked){let p=sqm*0.9; total+=p; items.push(`Moss and algae treatment: £${p.toFixed(2)}`);}
+if(extra.checked){let p=sqm*0.8; total+=p; items.push(`Heavy stain removal: £${p.toFixed(2)}`);}
+if(sand.checked){let p=sqm*4.1; total+=p; items.push(`Re-sanding: £${p.toFixed(2)}`);}
+if(seal.checked){let p=sqm*4.6; total+=p; items.push(`Surface sealing: £${p.toFixed(2)}`);}
+document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
+}
+</script>
+
+<h2>Our Services</h2>
+
+<h3>Driveways</h3>
+<p>Driveways are cleaned to remove oil stains, moss, weeds, and general grime. Re-sanding ensures long-term joint stability.</p>
+<a href="#driveway"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Darrington" class="service-image"></a>
+<div id="driveway" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt=""></a></div>
+
+<h3>Patios & Paving</h3>
+<p>Patios are washed carefully to remove moss, black spot, and weeds while protecting joints and stone surfaces.</p>
+<a href="#patio"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Darrington" class="service-image"></a>
+<div id="patio" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt=""></a></div>
+
+<h3>Decking</h3>
+<p>Decking is gently cleaned to remove grime and algae while preserving timber integrity. Optional sealing prolongs appearance and lifespan.</p>
+<a href="#deck"><img src="/images/deck.webp" alt="Decking cleaning Darrington" class="service-image"></a>
+<div id="deck" class="lightbox"><a href="#"><img src="/images/deck.webp" alt=""></a></div>
+
+<h3>Walls, Steps & Pathways</h3>
+<p>We clean walls, steps, and pathways to remove dirt, moss, and algae, improving safety and restoring visual appeal.</p>
+<a href="#walls"><img src="/images/pressure-wash-1.webp" alt="Path and wall cleaning Darrington" class="service-image"></a>
+<div id="walls" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt=""></a></div>
+
+<h2>Maintenance Tips</h2>
+<p>Regular sweeping, debris removal, and occasional spot cleaning help maintain your surfaces. Applying sealing or re-sanding reduces maintenance needs and protects surfaces for longer.</p>
+
+<h2>Book Your Darrington Pressure Washing Service</h2>
+<p>Call Home Repairs 4U today to arrange professional cleaning for your property in Darrington. Our team provides a thorough, reliable service tailored to your needs.</p>
+<div style="text-align:center;margin:36px 0;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+<p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
+
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+
+<br><br>
+
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
+target="_blank"
+rel="noopener"
+style="color:#fff; text-decoration:underline;">
+Facebook
+</a>
+</div>
+</footer>
+
+</body>
+</html>
