--- a/test.html
+++ b/test.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title>Home Repairs 4U – Guttering & Pressure Washing Services Across Doncaster</title>
-<meta name="description" content="Home Repairs 4U provides professional guttering and pressure washing services across Doncaster and surrounding villages. Get instant quotes with our online calculators.">
-
-<link rel="canonical" href="https://homerepairs4u.com/services/doncaster-services.html" />
-<link rel="icon" href="/favicon.png" type="image/png">
-<link rel="preload" as="image" href="/images/logo.webp">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Guttering & Pressure Washing Services Across Doncaster | Home Repairs 4U</title>
+<link rel="canonical" href="https://homerepairs4u.com/services/service-areas.html" />
+<meta name="description" content="Home Repairs 4U offers professional guttering and pressure washing services across Doncaster and surrounding villages. Get instant quotes with our calculators or call 07735 873694.">
+<link rel="icon" href="/favicon.png" type="image/png" />
+<link rel="preload" as="image" href="/images/logo.webp" />
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
-header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+body{margin:0;padding:0;font-family:Arial,sans-serif;background:#f9f9f9;color:#222;line-height:1.65;}
+header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
-.call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;}
+.call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#000;color:#fff;font-size:19px;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;}
 .call-btn:hover{background:#333;}
-main{max-width:1000px;margin:0 auto;background:#fff;padding:32px 22px;}
+main{max-width:900px;margin:0 auto;background:#fff;padding:25px 15px;}
 h1,h2,h3{color:#111;}
-ul{list-style:none;padding-left:0;}
-li{margin-bottom:12px;}
-a{color:#000;text-decoration:underline;}
-a:hover{text-decoration:none;}
-label{font-weight:bold;display:block;margin-bottom:6px;}
-input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
-.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
-.form-row input{width:22px;height:22px;}
+ul{padding-left:0;}
+li{margin-bottom:10px;}
+input[type="number"]{width:100%;padding:12px;margin-bottom:12px;font-size:16px;}
+.form-row{display:flex;align-items:center;gap:12px;margin-bottom:12px;}
 button{cursor:pointer;min-height:48px;}
-button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+button:focus,input:focus,a:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:underline;margin:0 6px;}
 </style>
 
 <!-- LocalBusiness Schema -->
@@ -44,111 +40,109 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 "@type":"PostalAddress",
 "addressLocality":"Doncaster",
 "addressRegion":"South Yorkshire",
-"postalCode":"DN",
+"postalCode":"DN6",
 "addressCountry":"GB"
 },
-"description":"Professional guttering and pressure washing services across Doncaster and surrounding villages. Get instant quotes with our online calculators.",
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
-"opens":"07:00",
-"closes":"20:00"
-}],
-"areaServed":["Adwick-le-Street","Askern","Bentley","Burghwallis","Campsall","Carcroft","Darrington","Fenwick","Hampole","Skellow","Sprotbrough","Woodlands","Kirk-Sandall"]
+"image":"https://homerepairs4u.com/images/logo.webp",
+"areaServed":["Doncaster","Askern","Bentley","Burghwallis","Campsall","Carcroft","Darrington","Skellow","Sprotbrough","Woodlands","Adwick-le-Street","Askern","Fenwick","Edenthorpe"],
+"openingHours":"Mo-Su 07:00-20:00"
 }
 </script>
+
 </head>
 <body>
 
 <header>
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
-<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
-<a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a>
+<br>
+<a href="tel:+447735873694" class="call-btn">📞 Call 07735 873694</a>
 </header>
 
 <main>
+
 <h1>Guttering & Pressure Washing Services Across Doncaster</h1>
 
-<p>Home Repairs 4U offers professional guttering and pressure washing services across Doncaster and surrounding villages. Use our instant quote calculators below or explore services in your local area.</p>
+<p>Home Repairs 4U provides professional guttering and pressure washing services to homes and businesses across Doncaster and nearby villages. Use our instant quote calculators below or visit individual local pages for detailed service info.</p>
+
+<img src="/images/guttering-service.webp" alt="Professional guttering service on a Doncaster home" class="service-image" loading="lazy">
 
 <h2>Instant Guttering Quote</h2>
 <form id="gutterQuoteForm">
-<label for="gutterMetres">Total gutter length (metres)</label>
-<input type="number" id="gutterMetres" min="1" step="0.1" required>
-
+<label for="metres">Total gutter length (metres)</label>
+<input type="number" id="metres" min="1" step="0.1" required>
 <div class="form-row"><input type="checkbox" id="clearing"><label for="clearing">Gutter clearing</label></div>
 <div class="form-row"><input type="checkbox" id="cleaning"><label for="cleaning">Gutter cleaning</label></div>
 <div class="form-row"><input type="checkbox" id="replacement"><label for="replacement">Gutter replacement</label></div>
-
-<button type="button" onclick="calculateGutterQuote()" class="call-btn">Get Gutter Estimate</button>
+<button type="button" onclick="calculateGutterQuote()" class="call-btn">Get Estimate</button>
 </form>
-
-<div id="gutterQuoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+<div id="gutterQuoteResult" style="margin-top:22px;font-weight:bold;"></div>
 
 <script>
 function calculateGutterQuote(){
-const m=parseFloat(document.getElementById('gutterMetres').value);
+const m=parseFloat(document.getElementById('metres').value);
 if(!m||m<=0){alert("Enter a valid length.");return;}
-let total=0;
-let items=[];
-if(clearing.checked){let p=m*5; total+=p; items.push(`Gutter clearing: £${p.toFixed(2)}`);}
-if(cleaning.checked){let p=m*5; total+=p; items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
-if(replacement.checked){let p=m*21.5; total+=p; items.push(`Gutter replacement: £${p.toFixed(2)}`);}
-document.getElementById("gutterQuoteResult").innerHTML=
-items.length? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`:"<p>Please select at least one service.</p>";
+const clearing=document.getElementById('clearing').checked;
+const cleaning=document.getElementById('cleaning').checked;
+const replacement=document.getElementById('replacement').checked;
+let total=0,items=[];
+if(clearing){let p=m*5;total+=p;items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning){let p=m*5;total+=p;items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement){let p=m*21.5;total+=p;items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+document.getElementById('gutterQuoteResult').innerHTML=items.length?`<ul>${items.map(i=>`<li>${i}</li>`).join('')}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`:"<p>Please select at least one service.</p>";
 }
 </script>
+
+<img src="/images/pressure-washing-service.webp" alt="Pressure washing driveway in Doncaster" class="service-image" loading="lazy">
 
 <h2>Instant Pressure Washing Quote</h2>
 <form id="pwQuoteForm">
-<label for="pwArea">Surface area (m²)</label>
-<input type="number" id="pwArea" min="1" step="0.1" required>
-
+<label for="sqm">Surface area (m²)</label>
+<input type="number" id="sqm" min="1" step="0.01" required>
 <div class="form-row"><input type="checkbox" id="wash" checked><label for="wash">Standard pressure washing</label></div>
-<div class="form-row"><input type="checkbox" id="bio"><label for="bio">Moss & algae treatment</label></div>
+<div class="form-row"><input type="checkbox" id="bio"><label for="bio">Moss and algae treatment</label></div>
 <div class="form-row"><input type="checkbox" id="extra"><label for="extra">Heavy stain removal</label></div>
 <div class="form-row"><input type="checkbox" id="sand"><label for="sand">Block paving re-sanding</label></div>
 <div class="form-row"><input type="checkbox" id="seal"><label for="seal">Protective sealing</label></div>
-
-<button type="button" onclick="calculatePWQuote()" class="call-btn">Get Pressure Washing Estimate</button>
+<button type="button" onclick="calculatePWQuote()" class="call-btn">Get Estimate</button>
 </form>
-
-<div id="pwQuoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+<div id="pwQuoteResult" style="margin-top:22px;font-weight:bold;"></div>
 
 <script>
 function calculatePWQuote(){
-const sqm=parseFloat(document.getElementById('pwArea').value);
+const sqm=parseFloat(document.getElementById('sqm').value);
 if(!sqm||sqm<=0){alert("Enter a valid area.");return;}
-let total=55;
-let items=["Service setup: £55.00"];
-if(wash.checked){let p=sqm*2.75; total+=p; items.push(`Pressure washing: £${p.toFixed(2)}`);}
-if(bio.checked){let p=sqm*0.9; total+=p; items.push(`Moss & algae treatment: £${p.toFixed(2)}`);}
-if(extra.checked){let p=sqm*0.8; total+=p; items.push(`Heavy stain removal: £${p.toFixed(2)}`);}
-if(sand.checked){let p=sqm*4.1; total+=p; items.push(`Re-sanding: £${p.toFixed(2)}`);}
-if(seal.checked){let p=sqm*4.6; total+=p; items.push(`Surface sealing: £${p.toFixed(2)}`);}
-document.getElementById("pwQuoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`;
+let total=55; let items=["Service setup: £55.00"];
+if(document.getElementById('wash').checked){let p=sqm*2.75; total+=p; items.push(`Pressure washing: £${p.toFixed(2)}`);}
+if(document.getElementById('bio').checked){let p=sqm*0.9; total+=p; items.push(`Moss & algae treatment: £${p.toFixed(2)}`);}
+if(document.getElementById('extra').checked){let p=sqm*0.8; total+=p; items.push(`Heavy stain removal: £${p.toFixed(2)}`);}
+if(document.getElementById('sand').checked){let p=sqm*4.1; total+=p; items.push(`Re-sanding: £${p.toFixed(2)}`);}
+if(document.getElementById('seal').checked){let p=sqm*4.6; total+=p; items.push(`Surface sealing: £${p.toFixed(2)}`);}
+document.getElementById('pwQuoteResult').innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join('')}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`;
 }
 </script>
 
-<h2>Our Service Locations</h2>
+<h2>Service Areas</h2>
 <ul>
-<li><a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street</a></li>
-<li><a href="/local/gutter-services-askern.html">Askern</a></li>
 <li><a href="/local/gutter-services-bentley.html">Bentley</a></li>
 <li><a href="/local/gutter-services-burghwallis.html">Burghwallis</a></li>
 <li><a href="/local/gutter-services-campsall.html">Campsall</a></li>
 <li><a href="/local/gutter-services-carcroft.html">Carcroft</a></li>
 <li><a href="/local/gutter-services-darrington.html">Darrington</a></li>
-<li><a href="/local/gutter-services-fenwick.html">Fenwick</a></li>
-<li><a href="/local/gutter-services-hampole.html">Hampole</a></li>
 <li><a href="/local/gutter-services-skellow.html">Skellow</a></li>
 <li><a href="/local/gutter-services-sprotbrough.html">Sprotbrough</a></li>
 <li><a href="/local/gutter-services-woodlands.html">Woodlands</a></li>
-<li><a href="/local/gutter-services-kirk-sandall.html">Kirk-Sandall</a></li>
+<li><a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street</a></li>
+<li><a href="/local/gutter-services-askern.html">Askern</a></li>
+<li><a href="/local/gutter-services-hampole.html">Hampole</a></li>
+<li><a href="/local/gutter-services-edenthorpe.html">Edenthorpe</a></li>
+<li><a href="/local/gutter-services-fenwick.html">Fenwick</a></li>
 </ul>
 
-<p>Each local page includes detailed service information, FAQs, and calculators for your convenience. Use them to get an instant estimate or call us directly at <strong>07735 873694</strong>.</p>
+<p>Call <strong>07735 873694</strong> to discuss your property requirements and get professional assistance across Doncaster and nearby villages.</p>
+
+<img src="/images/multi-services.webp" alt="Guttering and pressure washing combined service example" class="service-image" loading="lazy">
 
 </main>
 
